Broken positioning correction element dependent on theme
Making the element become independent positioning of the parent
elements.
If a preceding element receiving the float property, the next element is
affected, this was the case. Isolated the element in a div.
If the test Storefront Tema, see the broken and totally misaligned code.
But with this code element is independent, obtaining full width without
affecting the posicinamento of elements around

--- a/theme/default/css/main.css
+++ b/theme/default/css/main.css
@@ -1259,9 +1259,8 @@
   box-shadow: none;
   display: table;
   margin: 0;
-  padding: 15px 15px;
+  padding: 15px 0;
   width: 100%;
-  position: relative;
 }
 #anspress .ap-questions-item.hentry {
   margin: 0;
@@ -1332,17 +1331,6 @@
   font-size: 11px;
   margin: 0;
   padding: 0 6px;
-}
-#anspress .ap-questions-featured {
-  color: #d56f56;
-  font-size: 17px;
-  left: -20px;
-  position: absolute;
-  top: 14px;
-}
-#anspress .ap-questions .featured-question {
-  background: none repeat scroll 0 0 #fffae1;
-  border-bottom-color: #efe7bc;
 }
 #anspress .selected,
 #anspress .ap-best-answer-label {
@@ -2899,3 +2887,5 @@
 #anspress .ap-breadcrumbs > li a {
   color: #2488b7;
 }
+#div-ap-question-tab{width:100%; margin:5px 0;}
+.clear-both { clear: both; }
